// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an expandable table 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,12 @@
  <DocumentFragment>
    <pre>
      <code>
        {
-   "expanded": []
+   "expanded": [
+     "0"
+   ]
  }
      </code>
    </pre>
    <table
@@ -86,10 +88,53 @@
          <td>
            <span
              style="cursor: pointer; padding-left: 0rem;"
+           >
+             👇
+           </span>
+         </td>
+         <td>
+           tanner
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           29
+         </td>
+         <td>
+           100
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
            >
              👉
            </span>
          </td>
          <td
@@ -119,10 +164,139 @@
          </td>
          <td>
            50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           derek
+         </td>
+         <td>
+           perkins
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           Single
+         </td>
+         <td>
+           80
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           joe
+         </td>
+         <td>
+           bergevin
+         </td>
+         <td>
+           45
+         </td>
+         <td>
+           20
+         </td>
+         <td>
+           Complicated
+         </td>
+         <td>
+           10
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           jaylen
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           26
+         </td>
+         <td>
+           99
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           70
          </td>
        </tr>
        <tr>
`;

exports[`renders an expandable table 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,11 +1,12 @@
  <DocumentFragment>
    <pre>
      <code>
        {
    "expanded": [
-     "0"
+     "0",
+     "0.0"
    ]
  }
      </code>
    </pre>
    <table
@@ -131,11 +132,54 @@
          <td>
            <span
              style="cursor: pointer; padding-left: 2rem;"
+           >
+             👇
+           </span>
+         </td>
+         <td>
+           tanner
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           29
+         </td>
+         <td>
+           100
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
              👉
            </span>
          </td>
          <td
@@ -164,10 +208,139 @@
          </td>
          <td>
            50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           derek
+         </td>
+         <td>
+           perkins
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           Single
+         </td>
+         <td>
+           80
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           joe
+         </td>
+         <td>
+           bergevin
+         </td>
+         <td>
+           45
+         </td>
+         <td>
+           20
+         </td>
+         <td>
+           Complicated
+         </td>
+         <td>
+           10
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           jaylen
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           26
+         </td>
+         <td>
+           99
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           70
          </td>
        </tr>
        <tr>
`;

exports[`renders an expandable table 3`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,12 @@
    <pre>
      <code>
        {
    "expanded": [
      "0",
-     "0.0"
+     "0.0",
+     "0.0.0"
    ]
  }
      </code>
    </pre>
    <table
@@ -175,11 +176,54 @@
          <td>
            <span
              style="cursor: pointer; padding-left: 4rem;"
+           >
+             👇
+           </span>
+         </td>
+         <td>
+           tanner
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           29
+         </td>
+         <td>
+           100
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
              👉
            </span>
          </td>
          <td
@@ -208,10 +252,139 @@
          </td>
          <td>
            50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           derek
+         </td>
+         <td>
+           perkins
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           Single
+         </td>
+         <td>
+           80
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           joe
+         </td>
+         <td>
+           bergevin
+         </td>
+         <td>
+           45
+         </td>
+         <td>
+           20
+         </td>
+         <td>
+           Complicated
+         </td>
+         <td>
+           10
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           jaylen
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           26
+         </td>
+         <td>
+           99
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           70
          </td>
        </tr>
        <tr>
`;

exports[`renders an expandable table 4`] = `
Snapshot Diff:
- First value
+ Second value

@@ -3,11 +3,12 @@
      <code>
        {
    "expanded": [
      "0",
      "0.0",
-     "0.0.0"
+     "0.0.0",
+     "0.0.0.0"
    ]
  }
      </code>
    </pre>
    <table
@@ -220,11 +221,11 @@
          >
            <span
              style="cursor: pointer; padding-left: 6rem;"
            >
-             👉
+             👇
            </span>
          </td>
          <td>
@@ -252,10 +253,30 @@
          </td>
          <td>
            50
+         </td>
+       </tr>
+       <tr>
+         <td
+           colspan="7"
+         >
+           <pre>
+             <code>
+               {
+   "values": {
+     "firstName": "tanner",
+     "lastName": "linsley",
+     "age": 29,
+     "visits": 100,
+     "status": "In Relationship",
+     "progress": 50
+   }
+ }
+             </code>
+           </pre>
          </td>
        </tr>
        <tr>
`;

exports[`renders an expandable table 5`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,15 +1,10 @@
  <DocumentFragment>
    <pre>
      <code>
        {
-   "expanded": [
-     "0",
-     "0.0",
-     "0.0.0",
-     "0.0.0.0"
-   ]
+   "expanded": []
  }
      </code>
    </pre>
    <table
@@ -92,140 +87,11 @@
          >
            <span
              style="cursor: pointer; padding-left: 0rem;"
            >
-             👇
-           </span>
-         </td>
-         <td>
-           tanner
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           29
-         </td>
-         <td>
-           100
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           50
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👇
-           </span>
-         </td>
-         <td>
-           tanner
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           29
-         </td>
-         <td>
-           100
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           50
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👇
-           </span>
-         </td>
-         <td>
-           tanner
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           29
-         </td>
-         <td>
-           100
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           50
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👇
+             👉
            </span>
          </td>
          <td>
@@ -253,417 +119,10 @@
          </td>
          <td>
            50
-         </td>
-       </tr>
-       <tr>
-         <td
-           colspan="7"
-         >
-           <pre>
-             <code>
-               {
-   "values": {
-     "firstName": "tanner",
-     "lastName": "linsley",
-     "age": 29,
-     "visits": 100,
-     "status": "In Relationship",
-     "progress": 50
-   }
- }
-             </code>
-           </pre>
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           derek
-         </td>
-         <td>
-           perkins
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           Single
-         </td>
-         <td>
-           80
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           joe
-         </td>
-         <td>
-           bergevin
-         </td>
-         <td>
-           45
-         </td>
-         <td>
-           20
-         </td>
-         <td>
-           Complicated
-         </td>
-         <td>
-           10
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           jaylen
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           26
-         </td>
-         <td>
-           99
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           70
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           derek
-         </td>
-         <td>
-           perkins
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           Single
-         </td>
-         <td>
-           80
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           joe
-         </td>
-         <td>
-           bergevin
-         </td>
-         <td>
-           45
-         </td>
-         <td>
-           20
-         </td>
-         <td>
-           Complicated
-         </td>
-         <td>
-           10
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           jaylen
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           26
-         </td>
-         <td>
-           99
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           70
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           derek
-         </td>
-         <td>
-           perkins
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           Single
-         </td>
-         <td>
-           80
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           joe
-         </td>
-         <td>
-           bergevin
-         </td>
-         <td>
-           45
-         </td>
-         <td>
-           20
-         </td>
-         <td>
-           Complicated
-         </td>
-         <td>
-           10
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           jaylen
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           26
-         </td>
-         <td>
-           99
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           70
          </td>
        </tr>
        <tr>
`;
